# Rutabaga_QA_Website

./: .env.example  .gitignore  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  RAILWAY_DEPLOYMENT.md  README.md  TEST_QA_WORKFLOW.md  app.py  config.py  pyproject.toml  requirements.txt  verify_test.sh
app/: __init__.py  auth.py  models.py
app/routes/: admin.py  api.py  review.py
app/services/: __init__.py  answer_service.py  production_update_service.py  review_service.py
app/templates/: base.html  login.html  my_reviews.html  review.html
app/templates/admin/: dashboard.html
app/templates/partials/: empty_state.html  review_form.html
